# django-project-template

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  manage.py  pyproject.toml
core/: apps.py
project_name/: README.md  settings.py  urls.py
